// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breakout: should be able to delete last character inside a "wide" codeBlock preserving the node 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "marks": Array [
        Object {
          "attrs": Object {
            "mode": "wide",
          },
          "type": "breakout",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`breakout: should be able to delete last character inside a "wide" layoutSection in Safari 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "type": "paragraph",
            },
          ],
          "type": "layoutColumn",
        },
        Object {
          "attrs": Object {
            "width": 50,
          },
          "content": Array [
            Object {
              "attrs": Object {
                "extensionKey": "block-iframe-eh",
                "extensionType": "com.atlassian.confluence.macro.core",
                "layout": "default",
                "localId": "testId",
                "parameters": Object {
                  "macroMetadata": Object {
                    "placeholder": Array [
                      Object {
                        "data": Object {
                          "url": "",
                        },
                        "type": "icon",
                      },
                    ],
                  },
                  "macroParams": Object {},
                },
                "text": "Full width block extension demo",
              },
              "type": "extension",
            },
          ],
          "type": "layoutColumn",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "mode": "wide",
          },
          "type": "breakout",
        },
      ],
      "type": "layoutSection",
    },
  ],
  "type": "doc",
}
`;

exports[`breakout: should be able to switch to center mode back 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`breakout: should be able to switch to full-width mode 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "marks": Array [
        Object {
          "attrs": Object {
            "mode": "full-width",
          },
          "type": "breakout",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`breakout: should be able to switch to wide mode 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "marks": Array [
        Object {
          "attrs": Object {
            "mode": "wide",
          },
          "type": "breakout",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;
